# softwareudvikling

./: .gitignore  Control-systems.tex  userStories.tex
exercises/: Exercise1.sql  Exercise2.sql  MySQL Local.session.sql  bank.sql  facebook.sql  fugleobservationer.sql  kiosk.sql  sejlads.sql
notes/: Control-systems.tex  agile.tex  git.tex  intoduction.tex  introduction.tex  normalisering.tex  software-udvikling.tex  software_arkitektur.tex  sql.tex  userStories.tex
pa2/: .gitignore  CMakeLists.txt  README.md  pa2  robot.session.sql
pa2/include/: client.h  database.h  robot.h
pa2/src/: client.cpp  database.cpp  main.cpp  robot.cpp
projekt/: CMakeLists.txt  Makefile  compile_commands.json  queries.sql  restaurant
projekt/.cache/clangd/index/: app.cpp.3B0AA9E78EA9D632.idx  app.h.63FB8F992B3BE786.idx  database.cpp.F8D88B6E035DEE71.idx  database.h.B989F1D286F52DC2.idx  main.cpp.500AF52896A1ADCF.idx  mainFrame.cpp.60C692C9BCFE1121.idx  mainFrame.h.D70449AF95CB13D6.idx
projekt/include/: database.h  mainFrame.h
projekt/src/: app.cpp  database.cpp  main.cpp  mainFrame.cpp
